google form added

--- a/views/inbox.html
+++ b/views/inbox.html
@@ -1,7 +1,7 @@
 <div class="module inbox-view">
   <div class="module__title">
-  <a>  <h1> {{ inbox.title }} </h1></a>
-  <a>   <h1>  {{ inbox.option2 }}</h1></a>
+  <a href="#/inbox" ><h1> {{ inbox.title }} </h1></a>
+  <a href="#/form"><h1>  {{ inbox.option2 }}</h1></a>
   </div>
 </div>
 <div class="module directive">
