--- a/css/default.css
+++ b/css/default.css
@@ -1,5 +1,5 @@
 /* General Demo Style */
-@import url(http://fonts.googleapis.com/css?family=Lato:300,400,700);
+@import url(css.css);
 
 @font-face {
 	font-family: 'codropsicons';
@@ -45,13 +45,13 @@ body {
 }
 
 a {
-	color: #888;
+	color: white;
 	text-decoration: none;
 }
 
 a:hover,
 a:active {
-	color: #333;
+	color: #23D9DA;
 }
 
 /* Header Style */
