--- a/css/style.css
+++ b/css/style.css
@@ -18,7 +18,11 @@ ol {
  * header
  */
 .header {
-  padding: 25px 0;
+      left: 0px;
+    position: fixed;
+    right: 0px;
+    z-index: 5;
+  padding: 10px 0;
   background: #192124;
   margin: 0 0 10px;
   color: #D5DDE0;
@@ -68,6 +72,7 @@ ol {
   color: #D5DDE0;
   left: 0;
   width: 10%;
+  margin-top: 30px;
   padding: 25px;
 }
 
@@ -114,6 +119,7 @@ ol {
 }
 
 .search-bar {
+  margin-top: 30px;
   background-color: #E3E1E2;
   height: 105px;
   padding: 25px;
