--- a/views/email.html
+++ b/views/email.html
@@ -1,6 +1,6 @@
 <div class="module inbox-view">
   <div class="module__title">
-    <h1> {{ email.title }} </h1>
+   <a href="#/inbox"> <h1> {{ email.title }} </h1> </a>
   </div>
   
 </div>
